Month View: background color computation for dark mode theme

BUG: 413521
FIXED-IN: 5.13.0

Differential Revision: https://phabricator.kde.org/D25262